# CogniSpace

./: .gitignore  README.md
backend/: CLI_USER_GUIDE.md  README.md  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: autoprompt.py  datasets.py  dev_team.py  gitops.py  logs.py
backend/app/core/: config.py  contracts.py  logging.py
backend/app/models/: autoprompt.py  dataset.py  dev_team.py  events.py  gitops.py
backend/app/services/autoprompt/: correction_agent.py  dev_team.py  drift_guard.py  engine.py  gitops.py  global_tags.py  preplanning_agent.py  registry.py  scoring_profile.py  service.py
backend/app/services/dataset/: jsonic_builder.py  registry.py
backend/app/services/logging/: analytics.py  event_store.py
backend/datasets_stress/20260211-001033/: jsonic_10dd578f85b8.manifest.json
backend/datasets_stress/20260211-001441/: jsonic_3fbf1eb79215.manifest.json
backend/llm_workspace_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: conftest.py  test_autoprompt_api.py  test_budget_caps.py  test_cli.py  test_correction_agent.py  test_dataset_api.py  test_dev_team_api.py  test_dev_team_stress.py  test_drift_guard.py  test_gitops_api.py  test_gitops_mocking.py  test_global_tag_protocol.py  test_health.py  test_logging_analytics.py  test_logging_replay.py  test_stress_quality.py
contracts/schema/: autoprompt_run.schema.json  event_envelope.schema.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  (+1 more)
scripts/: bootstrap.ps1
(+20 files in other folders)
