[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-workspace-backend"
version = "0.1.0"
description = "Backend services for multi-LLM workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "python-socketio>=5.11.0,<6.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "structlog>=24.4.0,<25.0.0",
  "orjson>=3.10.0,<4.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "redis>=5.0.0,<6.0.0",
  "httpx>=0.27.0,<1.0.0",
  "jsonschema>=4.23.0,<5.0.0"
]

[project.scripts]
cogni-backend = "app.cli:run"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
